added intro and experience

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+
 @import "tailwindcss";
+
+@theme {
+  --color-portfolio-gray: #c5c5c5;
+  --color-portfolio-darkgray: #2a2a2a;
+  --color-portfolio-black: #161513;
+  --color-portfolio-white: #ffffff;
+
+  --font-portfolio-poppins: "Poppins", serif;
+}
